# PySDM

./: .appveyor.yml  .codecov.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .travis.yml  .travis.yml.off  .zenodo.json  COPYRIGHT  PySDM.html  PySDM_examples.html  README.md  TODOs  __ptx_cache__.db  appveyor.yml  builder.html  core.html  environment.yml  formulae.html  index.html  jax_test.ipynb  jax_test.py  markdown_link_check_config.json  meta.yaml  paper.bib  paper.md  particulator.html  postBuild  pylint.out  pyproject.toml  requirements-examples.txt  requirements.txt  runtime.txt  setup.py  test-time-requirements.txt
examples/: MANIFEST.in  README.md  SDM  Shima_et_al_2009_Fig_2.ipynb  Shima_et_al_2009_Fig_2.py  pyproject.toml  setup.py
examples/Arabas_and_Shima_2017_Fig_5/: demo.ipynb  example.py  setup.py
examples/Arabas_and_Shima_2017_Fig_5/.ipynb_checkpoints/: demo-checkpoint.ipynb
examples/Arabas_et_al_2015_Fig_8/: demo.ipynb  demo_controller.py  demo_setup.py  demo_viewer.py  example.py  setup.py  storage.py
examples/Arabas_et_al_2015_Fig_8/mpdata/: __init__.py  fields.py  formulae.py  magic.py  mpdata.py  mpdata_factory.py  mpdata_runner.py
examples/ICMW_2012_case_1/: demo.ipynb  demo_controller.py  demo_setup.py  demo_viewer.py  example.py  export.py  plotter.py  setup.py  storage.py
examples/ICMW_2012_case_1/output/: README
examples/PySDM_examples/: __init__.py
examples/PySDM_examples/Abade_and_Albuquerque_2024/: __init__.py  fig_2.ipynb  settings.py  simulation.py
examples/PySDM_examples/Abdul_Razzak_Ghan_2000/: __init__.py  aerosol.py  data_from_ARG2000_paper.py  data_from_CloudMicrophysics_ARG.py  fig_4_kinetic_limitations.ipynb  figs1-5.ipynb  run_ARG_parcel.py
examples/PySDM_examples/Alpert_and_Knopf_2016/: __init__.py  fig_1.ipynb  fig_2.ipynb  fig_3.ipynb  fig_4.ipynb  fig_5.ipynb  simulation.py  table.py  table_1.py  table_2.py
examples/PySDM_examples/Alpha_frac/: alpha_of_altitude.ipynb
examples/PySDM_examples/Arabas_and_Pawlowska_2011/: __init__.py  fig_1.ipynb  fig_2.ipynb  settings.py  simulation.py
examples/PySDM_examples/Arabas_and_Shima_2017/: __init__.py  example.py  fig_5.ipynb  settings.py  simulation.py
examples/PySDM_examples/Arabas_et_al_2015/: __init__.py  example.py  example_benchmark.py  gui.ipynb  paraview_hello_world.ipynb  pvscript.py  settings.py  spin_up.py
examples/PySDM_examples/Arabas_et_al_2023/: __init__.py  aida.ipynb  commons.py  copula_hello.ipynb  fig_11.ipynb  fig_2.ipynb  fig_A2.ipynb  fig_convergence.ipynb  figs_10_and_11_and_animations.ipynb  figs_3_and_7_and_8.ipynb  figs_5_and_6.ipynb  frozen_fraction.py  main.ipynb  make_particulator.py  plots.py  run_simulation.py  thought_experiments.ipynb  zigzag.ipynb
examples/PySDM_examples/Arabas_et_al_2025/: __init__.py  aida.ipynb  commons.py  copula_hello.ipynb  fig_2.ipynb  fig_A2.ipynb  figs_10_and_11_and_animations.ipynb  figs_3_and_7_and_8.ipynb  figs_5_and_6.ipynb  make_particulator.py  plots.py  run_simulation.py
examples/PySDM_examples/Barahona_and_Nenes_2007/: fig_1.ipynb
examples/PySDM_examples/Bartman_2020_MasterThesis/: __init__.py  fig_4_adaptive_sdm.py  fig_5_SCIPY_VS_ADAPTIVE.py
examples/PySDM_examples/Bartman_et_al_2021/: __init__.py  demo.ipynb  demo_fig2.ipynb  demo_fig3.ipynb  label.py
examples/PySDM_examples/Berry_1967/: __init__.py  example.py  example_fig_6.py  figs_5_8_10.ipynb  settings.py  spectrum_plotter.py
examples/PySDM_examples/Bhalla_2023/: example_0D.ipynb  example_1D.ipynb  logging_observers.py  plot_terminal_velocity_approx.py  settings_0D.py  settings_1D.py  simulation_0D.py  simulation_1D.py  testing_0D.ipynb
examples/PySDM_examples/Bieli_et_al_2022/: __init__.py  make_fig_3.ipynb  settings.py  simulation.py
examples/PySDM_examples/Bolin_1958/: __init__.py  common.py  table_1.ipynb  timescales_comparison.ipynb
examples/PySDM_examples/Bolot_et_al_2013/: __init__.py  alpha_of_altitude.ipynb  fig_1.ipynb  height_temperature.py
examples/PySDM_examples/Bulenok_2023_MasterThesis/: __init__.py  performance_comparison_Srivastava_Setup.ipynb  performance_comparison_Srivastava_Setup.py  setups.py  utils.py
examples/PySDM_examples/Craig_1961/: GMWL.ipynb
examples/PySDM_examples/Erinin_et_al_2025/: __init__.py  aerosol.py  expansion_experiment.ipynb  expansion_experiment_nucleation.ipynb  expansion_simulation.py  fig_3.ipynb
examples/PySDM_examples/Ervens_and_Feingold_2012/: __init__.py  settings.py
examples/PySDM_examples/Fisher_1991/: Untitled.ipynb  __init__.py  fig_2.ipynb
examples/PySDM_examples/Gedzelman_and_Arnold_1994/: Helpers.py  __init__.py  fig_2.ipynb
examples/PySDM_examples/Gonfiantini_1986/: __init__.py  fig_3_1.ipynb
examples/PySDM_examples/Grabowski_and_Pawlowska_2023/: __init__.py  figure_1.ipynb  figure_2.ipynb  figure_3.ipynb  figure_4.ipynb  figure_ripening_rate.ipynb  figure_ripening_rate_1.ipynb  settings.py  simulation.py
examples/PySDM_examples/Graf_2019/: Table_1.ipynb  __init__.py  figure_4.ipynb  try.ipynb
examples/PySDM_examples/Graf_et_al_2019/: Table_1.ipynb  __init__.py  figure_4.ipynb
examples/PySDM_examples/Hill_et_al_2023/: __init__.py  alpha_fig1_2_4.ipynb  alpha_settings_run.py  cross_sections.py  figs_1_2_4.ipynb
examples/PySDM_examples/Jaruga_and_Pawlowska_2018/: __init__.py  fig_2.ipynb  fig_3.ipynb
examples/PySDM_examples/Jensen_Nugent_2016/: Fig_1.ipynb  Fig_3.ipynb  plotting.py  settings.py  simulation.py
examples/PySDM_examples/Jensen_and_Nugent_2016/: Fig_1.ipynb  Fig_3.ipynb  Fig_4.ipynb  Fig_5.ipynb  Fig_6.ipynb  plotting.py  settings.py  simulation.py  (+1 more)
examples/Shima_et_al_2009_Fig2/: Fig_2.py  input.json  plotter.py  setups.py  utils.py
examples/Shima_et_al_2009_Fig_2/: __init__.py  __ptx_cache__.db  demo.ipynb  draw.py  example.py  plotter.py  setup.py  timing.py
examples/Shima_et_al_2009_Fig_2_timing/: __ptx_cache__.db  draw.py  plotter.py  timing.py
examples/Yang_et_al_2018/: example.py  setup.py
examples/Yang_et_al_2018_Fig_2/: demo.ipynb  example.py  setup.py
examples/docs/: pysdm_examples_landing.md
(+3667 files in other folders)
