[tool.isort]
profile = "black"

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "post-release"

[tool.setuptools.packages.find]
include = ["PySDM", "PySDM*"]

[build-system]
requires = ['setuptools==82.0.1', 'setuptools-scm==10.2.0']
build-backend = "setuptools.build_meta"

[project]
name = "pysdm"
description = "Pythonic particle-based (super-droplet) warm-rain/aqueous-chemistry cloud microphysics package with box, parcel & 1D/2D prescribed-flow examples in Python, Julia and Matlab"
readme = "README.md"
keywords = ["physics-simulation", "monte-carlo-simulation", "gpu-computing",
    "atmospheric-modelling", "particle-system", "numba", "thrust",
    "nvrtc", "pint", "atmospheric-physics",
]
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">= 3.8"
authors = [
    {name = "https://github.com/open-atmos/PySDM/graphs/contributors", email = "sylwester.arabas@agh.edu.pl"}
]     
dynamic = ["version"]
dependencies = [ 
  "ThrustRTC>=0.3.20",
  "CURandRTC>=0.1.2",
  "numba>=0.51.2",
  "jax>=0.6.2",
  "scipy>=1.15.0", 
  "numpy",
  "Pint",
  "chempy",
  "pyevtk",
  "pyparsing",
]

[project.optional-dependencies]
unit-tests = [
  "pytest",
  "pytest-timeout",
  "matplotlib!=3.9.1",
]

nonunit-tests = [
  "pytest",
  "PySDM-examples",
  "PyPartMC",
]

CI_version_pins = [
  "PyPartMC==2.1.0",
  "numba==0.60.0",
  "numpy==2.0.2",
  "scipy==1.15.3",
  "ThrustRTC==0.3.20",
  "CURandRTC==0.1.7",
  "jax==0.6.2",
  "Pint==0.24.4",
  "chempy==0.10.1",
  "pyevtk==1.7.0",
  "pyparsing==3.2.5",
]

[project.urls]
Tracker = "https://github.com/open-atmos/PySDM/issues"
Documentation = "https://open-atmos.github.io/PySDM"
Source = "https://github.com/open-atmos/PySDM"
