[tool.setuptools_scm]
root = ".."
local_scheme = "no-local-version"
version_scheme = "post-release"

[build-system]
requires = ['setuptools==82.0.1', 'setuptools-scm==9.2.2']
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["PySDM_examples", "PySDM_examples*"]

[project]
name = "pysdm-examples"
description = "PySDM usage examples reproducing results from literature and depicting how to use PySDM from Python Jupyter notebooks"
license = "GPL-3.0-only"
authors = [
    {name = "https://github.com/open-atmos/PySDM/graphs/contributors", email = "sylwester.arabas@agh.edu.pl"}
]
dynamic = ["version", "readme"]
dependencies = [
    "PySDM",
    "PyMPDATA",
    "open-atmos-jupyter-utils",
    "pystrict",
    "matplotlib",
    "joblib",
    "ipywidgets",
    "seaborn",
    "numdifftools",
    "vtk",
    "pyrcel",
    "pyvinecopulib",
    "networkx",
    "PyVista",
]

[project.optional-dependencies]
CI_version_pins = [
    "PySDM[CI_version_pins]",
    "PyMPDATA==1.7.3",
    "open-atmos-jupyter-utils==1.5.0",
    "pystrict==1.3",
    "matplotlib!=3.9.1",
    "joblib==1.5.3",
    "ipywidgets==8.1.7",
    "seaborn==0.13.2",
    "numdifftools==0.9.42",
    "vtk==9.6.2",
    "pyrcel==1.3.4",
    "pyvinecopulib==0.7.6",
]

[project.urls]
Tracker = "https://github.com/open-atmos/PySDM/issues"
Documentation = "https://open-atmos.github.io/PySDM/PySDM_examples"
Source = "https://github.com/open-atmos/PySDM/tree/main/examples"
